# cleaboard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: keyboard.rs  main.rs  state.rs  ui.rs
