# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "cleaboard"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
description = "Utility for disabling keyboard to make cleaning easier"
keywords = ["keyboard", "disable", "cleaning"]
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
repository = "https://github.com/devzbysiu/cleaboard"
documentation = "https://docs.rs/cleaboard"
edition = "2021"

[dependencies]
anyhow = "1.0.42"
druid = { git = "https://github.com/linebender/druid" }
log = "0.4.11"
pretty_env_logger = "0.4.0"
